--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,5 @@ python-dotenv>=1.0,<2.0
 # tzdata provides IANA timezone data for Windows (safe cross‑platform default).
 tzdata>=2024.1
 
-# ---- Optional: if you also run the Wizards news scraper task ----
 # beautifulsoup4 parses HTML when scraping the news archive.
-# Uncomment if/when you enable that task.
-# beautifulsoup4>=4.12,<5.0
+beautifulsoup4>=4.12,<5.0
