Added prints cvs. cards config

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ BULK_DIR=bulk_cache
 WINDOW_DAYS=1
 STATE_PATH=state.json
 POST_DELAY_MS=700
+
+# Choose: prints | cards (prints = every printing; cards = roll up reprints)
+SCRYFALL_UNIQUE=prints
