Added MTG_NEWS_CHANNEL_ID config

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DISCORD_TOKEN=REPLACE_ME
 MTG_SPOILERS_CHANNEL_ID=REPLACE_ME
 UB_SPOILERS_CHANNEL_ID=REPLACE_ME
 BOT_TESTING_CHANNEL_ID=REPLACE_ME
+MTG_NEWS_CHANNEL_ID=REPLACE_ME
 
 # Schedule & behavior
 POST_HOUR=9
